remove java vm options